# bitshares-core

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
docker/: default_config.ini  gravityentry.sh
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt  database_api.cpp  impacted.cpp
libraries/app/include/graphene/app/: database_api.hpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  db_block.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_notify.cpp  db_update.cpp  gravity_activity_object.cpp  gravity_emission_object.cpp  gravity_evaluator.cpp  gravity_transfer_object.cpp  transfer_evaluator.cpp
libraries/chain/include/graphene/chain/: account_object.hpp  config.hpp  database.hpp  evaluator.hpp  gravity_activity_object.hpp  gravity_emission_object.hpp  gravity_evaluator.hpp  gravity_transfer_object.hpp  vote_count.hpp
libraries/chain/protocol/: account.cpp  gravity.cpp
libraries/plugins/account_history/: account_history_plugin.cpp
libraries/singularity/: emission.cpp  gravity_index_calculator.cpp  ncd_aware_rank.cpp  utils.cpp
libraries/singularity/include/graphene/singularity/: activity_index_calculator.hpp  emission.hpp  scan.hpp
libraries/singularity/singularity/: CMakeLists.txt  activity_index_calculator.cpp  scan.cpp
libraries/singularity/singularity/include/graphene/poi/: activity_index_calculator.hpp  ncd_aware_rank.hpp  singularity.hpp
libraries/wallet/: CMakeLists.txt  wallet.cpp
programs/build_helpers/: CMakeLists.txt
tests/common/: database_fixture.cpp
(+7 files in other folders)
